--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,5 @@
 org.gradle.jvmargs  = -Xmx1G
 
-##Fabric properties
-#minecraft_version   = 1.16.3
-#yarn_mappings       = 1.16.3+build.5
-#loader_version      = 0.9.3+build.207
-
 #Fabric properties
 minecraft_version   = 1.16.2
 yarn_mappings       = 1.16.2+build.21
@@ -14,3 +9,7 @@ loader_version      = 0.9.2+build.206
 mod_version         = 0.1.0
 maven_group         = com.github.chaostheeternal.navigation_hud
 archives_base_name  = navigation_hud
+
+#Dependencies
+fabric_api_version  = 0.18.0+build.397-1.16
+
